--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
      ****************************************************/
     async function hasInternetConnection() {
       try {
-        const response = await fetch("https://www.google.com/favicon.ico", { method: "HEAD", mode: "no-cors" });
-        return true;
-      } catch (e) {
+        const online = window.navigator.onLine;
+        if (!online) return false;
+        const response = await fetch("https://www.gstatic.com/generate_204", { method: "HEAD", cache: "no-store" });
+        return response.ok;
+      } catch {
         return false;
       }
     }
@@ -154,6 +156,7 @@
   </script>
 </body>
 </html>
+
 
   -->
 </body>
