--- a/index.html
+++ b/index.html
@@ -1,163 +1,19 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SmartClipboard Ads</title>
-  <meta name="google-adsense-account" content="ca-pub-4439906628582965">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4439906628582965"
-          crossorigin="anonymous"></script>
-
-  <style>
-    body, html {
-      margin: 0;
-      padding: 10px;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #2D2D2D;
-      color: #E6E6EB;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      text-align: center;
-      overflow: hidden;
-    }
-    .ad-container {
-      width: 100%;
-    }
-    a {
-      color: #78A0FF;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    img, video {
-      max-width: 100%;
-      border-radius: 8px;
-      border: 1px solid #464650;
-      margin-top: 8px;
-    }
-  </style>
 </head>
 <body>
   <div class="ad-container" id="adContainer">
-    <p>Chargement des publicités...</p>
+    <!-- Ce bloc d'annonce est conçu pour afficher les publicités Google AdSense -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-4439906628582965"
+         data-ad-slot="7584788658"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
   </div>
 
   <script>
-    // Variable globale pour stocker la liste des fichiers locaux
-    let localAdFiles = [];
-    let currentAdTimeout = null; // Pour gérer le timer de rotation
-
-    /****************************************************
-     * 🎯 Vérifie la connexion Internet
-     ****************************************************/
-    async function hasInternetConnection() {
-      try {
-        const online = window.navigator.onLine;
-        if (!online) return false;
-        const response = await fetch("https://www.gstatic.com/generate_204", { method: "HEAD", cache: "no-store" });
-        return response.ok;
-      } catch {
-        return false;
-      }
-    }
-
-    /****************************************************
-     * 🔹 Affiche le bloc Google AdSense
-     ****************************************************/
-    function showAdSense() {
-      const container = document.getElementById("adContainer");
-      container.innerHTML = `
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-4439906628582965"
-             data-ad-slot="7584788658"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>`;
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    }
-
-    /****************************************************
-     * 🔹 Affiche une publicité locale (image ou vidéo)
-     *    et gère la rotation.
-     ****************************************************/
-    function showNextLocalAd() {
-      const container = document.getElementById("adContainer");
-      // S'assure que la rotation précédente est arrêtée
-      if (currentAdTimeout) clearTimeout(currentAdTimeout);
-
-      if (!localAdFiles || localAdFiles.length === 0) {
-        container.innerHTML = "<p>Aucune publicité locale trouvée.</p>";
-        return;
-      }
-
-      // Choisit un fichier aléatoire dans la liste
-      const randomFile = localAdFiles[Math.floor(Math.random() * localAdFiles.length)];
-      const ext = randomFile.split('.').pop().toLowerCase();
-
-      let mediaHTML = "";
-      let isVideo = false;
-
-      // Génère le HTML en fonction du type de fichier
-      if (["mp4", "webm", "avi"].includes(ext)) {
-        mediaHTML = `<video id="localVideoAd" src="${randomFile}" autoplay muted></video>`;
-        isVideo = true;
-      } else if (["jpg", "jpeg", "png", "gif"].includes(ext)) {
-        mediaHTML = `<img src="${randomFile}" alt="Publicité">`;
-      }
-
-      // Affiche la publicité
-      container.innerHTML = `
-        ${mediaHTML}
-      `;
-
-      // Gère la rotation
-      if (isVideo) {
-        const videoElement = document.getElementById("localVideoAd");
-        // Passe à la pub suivante à la fin de la vidéo
-        videoElement.onended = showNextLocalAd;
-        // Sécurité : si la vidéo ne se charge pas, rotation après 60s
-        currentAdTimeout = setTimeout(showNextLocalAd, 60000);
-      } else {
-        // Pour les images, passe à la pub suivante après 30 secondes
-        currentAdTimeout = setTimeout(showNextLocalAd, 30000);
-      }
-    }
-
-    /****************************************************
-     * 🔹 Point d’entrée principal
-     ****************************************************/
-    (async () => {
-      // 1. Vérifie la connexion Internet
-      const online = await hasInternetConnection();
-
-      if (online) {
-        // 2a. Si en ligne, affiche les publicités Google AdSense
-        showAdSense();
-      } else {
-        // 2b. Si hors ligne, demande la liste des fichiers locaux à l'application C#
-        window.chrome.webview.postMessage("requestLocalAds");
-      }
-    })();
-
-    /****************************************************
-     * 🔹 Réception des fichiers depuis C#
-     ****************************************************/
-    window.chrome?.webview?.addEventListener("message", event => {
-      // Cet écouteur est déclenché à la fois pour la demande initiale
-      // et pour toute mise à jour envoyée par l'application C#.
-      if (event.data && event.data.localAds) {
-        console.log("Mise à jour de la liste des publicités locales reçue.");
-        localAdFiles = event.data.localAds; // Met à jour la liste des fichiers.
-        // Redémarre la rotation avec la nouvelle liste.
-        showNextLocalAd(); // Affiche la première publicité et démarre la rotation
-      }
-    });
+    // Cette ligne est essentielle pour que Google AdSense remplisse le bloc d'annonce.
+    (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </body>
 </html>
 
-
-  -->
-</body>
-</html>
